fix scrollbar issue on homepage and org list class name

--- a/site/media/master/stylesheet.css
+++ b/site/media/master/stylesheet.css
@@ -1779,7 +1779,6 @@ ul#issuearealist {
 		}
 
 	.hm_slide_mid {
-		width: 4700px;
 		height: 420px;
 		margin: 0 0 0 0;
 		overflow: hidden;
